# monitor-legislativo-v4

./: .env.development  .env.example  .env.production.example  .env.production.template  .eslintrc.js  .gitignore  .npmrc  .pre-commit-config.yaml  .railway-deploy  .railway-redeploy  ACADEMIC_REFACTORING_SUMMARY.md  ACADEMIC_SIMPLIFICATION_REPORT.md  ALTERNATIVE_DATABASE_URL.md  API_DOCUMENTATION.md  API_PSYCHOPATH_ANALYSIS_REPORT.md  ARCHITECTURE_ENHANCEMENT_PLAN.md  ASYNCPG_RAILWAY_FIX_SOLUTION.md  AWS_REGISTRATION_TROUBLESHOOTING.md  AWS_SECRETS_MANAGER_REPORT.md  AWS_SETUP_GUIDE.md  CDN_CACHING_OPTIMIZATION_ROADMAP.md  CLAUDE.md  CLEANUP_AND_FIXES_REPORT.md  CLEANUP_EXECUTION_REPORT.md  CLEANUP_REPORT_AND_PLAN.md  CLEANUP_SUMMARY.md  CNAME  CODE_ANALYSIS_REPORT.md  COMPLETE_SETUP_GUIDE_FOR_BEGINNERS.md  COMPREHENSIVE_IMPLEMENTATION_EXECUTION_REPORT.md  DASHBOARD_ENHANCEMENT_REPORT.md  DASHBOARD_ENHANCEMENT_SUMMARY.md  DEPLOYMENT_AUDIT_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_READY.md  Dockerfile  Dockerfile.api  Dockerfile.backend  (+154 more)
.claude/: settings.local-DESKTOP-7CFES0M-2.json  settings.local-DESKTOP-7CFES0M.json  settings.local.json
academic/: bibliography-export.py  citation-manager.py  research-workspace.py  semantic-search.py
aws-mackintegridade-deployment/: PRD-AWS-MACKENZIE-DEPLOYMENT.md  README.md  deployment-plan.md  typo3-integration-guide.md
backend/: pyproject.toml  railway.json
backup_recovery/: automated_backup_system.py  backup_restoration_tester.py  data_integrity_monitor.py  disaster_recovery_orchestrator.py
configs/: alert_config.json  cache_config.yaml  demo_config.json
core/: __init__-DESKTOP-7CFES0M.py  __init__.py
data/: production_status.json
data_export/: comprehensive_exporter.py  external_api.py  report_generator.py  visualization_engine.py
database/: backup-recovery.sh  connection-pool-config.py  materialized-view-manager.py  schema-optimization.sql
deployment/: production_config.py  production_deployer.py
design-system/: README.md  accessibility.md  brand.md
desktop/: Dockerfile  __init__.py  __main__.py  cli_main.py  main.py
development/: README.md  health-checks.sh  ssl-generation.sh
docs/: ADMIN_GUIDE.md  ASYNCPG_RAILWAY_FIX_SOLUTION.md  DEPLOYMENT_SETUP_CHECKLIST.md  DEVELOPMENT_SETUP.md  LEXML_INTEGRATION_GUIDE.md  PRIVATE_DATABASE_SETUP_GUIDE.md  README.md  TEAM_ONBOARDING_GUIDE.md  USER_GUIDE.md  plugin_development_guide.md
documentation/: DATABASE_OPTIMIZATION_GUIDE.md  MONITORING_ALERTING_GUIDE.md  MONTHLY_COST_ANALYSIS.md  NGINX_LOAD_BALANCER_GUIDE.md  README.md  SECURITY_COMPLIANCE_GUIDE.md
examples/: websocket_client.py
k8s/: service-mesh.yaml
launch/: LAUNCH_CHECKLIST.md  PRODUCTION_DEPLOYMENT_GUIDE.md  launch_orchestrator.py
leaflet-icons/: README.md
legislative_monitor_r/: .Rprofile  README.md  config.yml
main_app/: Dockerfile  gateway_router.py  main.py
migrations/: 001_two_tier_schema.sql  002_document_fingerprints.sql  002_periodic_collection_schema.sql  003_export_logs.sql  004_alerts_table.sql
monitoring/: alert_rules.yml  loki-config.yml  production-alerts.yml  prometheus-config.yml  prometheus.yml  promtail-config.yml  sla-monitor.py
nginx/: nginx.conf
performance/: backend_optimizer.py  frontend_optimizer.py
planning/: Implementation-Roadmap-2024.md  Phase-1-Core-Infrastructure.md  Project-Execution-Tracker.md  projectplan.md
plugins/: keyword_analyzer.py
public/: service-worker.js
r-shiny-app/: .Rprofile  .env.example  .gitignore  AUTHENTICATION_IMPLEMENTATION_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.simple  PRE_DEPLOYMENT_AUDIT_REPORT.md  README.md  SETUP_INSTRUCTIONS.md  WINDOWS_DEPLOYMENT.md  app.R  check_setup.R  config.yml  debug_deployment.R  deploy.R  deploy.bat  deploy_minimal.R  deploy_simple.R  deploy_windows.ps1  docker-compose.yml  health_status.json  install_minimal.R  install_packages.R  install_shiny.R  minimal_health_server.R  quick_install.R  run_docker.sh  run_local.R  run_local.bat  setup_and_run.R  setup_and_run.bat  setup_complete.sh  simple_app.R  simple_test.R  test_auth.R  test_auth_integration.R  test_shiny_server.R
r-shiny-minimal/: Dockerfile  app.R
r-shiny-standalone/: .railwayignore  Dockerfile  app.R  railway.toml
scripts/: api_health_validator.py  (+22 more)
(+920 files in other folders)
