[tool.poetry]
name = "monitor-legislativo-backend"
version = "0.1.0"
description = "Backend for Monitor Legislativo v4"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
python-multipart = "0.0.6"
redis = "5.0.1"
aioredis = "2.0.1"
asyncpg = "0.29.0"  # Correct, working version
sqlalchemy = {extras = ["asyncio"], version = "2.0.23"}
httpx = "0.25.2"
aiohttp = "3.9.1"
requests = "2.31.0"
beautifulsoup4 = "4.12.2"
lxml = "4.9.3"
python-dateutil = "2.8.2"
pydantic = "2.5.2"
tqdm = "4.66.1"
openpyxl = "3.1.2"
python-dotenv = "1.0.0"
PyYAML = "6.0.1"
prometheus-client = "0.19.0"
cryptography = "41.0.7"
orjson = "3.9.10"
prefect = "2.14.11"
spacy-legacy = "*"
unidecode = "*"
xmltodict = "*"
psutil = "*"
babel = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
# Add other development dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 